--- a/README
+++ b/README
@@ -14,4 +14,10 @@ the color of the ink matches the name of the color."
 
 Correct answers worth 1 point, wrong ones give you -1 point.
 
+Some screens of gameplay:
+
+  http://imgur.com/Luhp3an
+  http://imgur.com/YALKrew
+  http://imgur.com/PTdBQZE
+
 Hope you enjoy playing it!
